添加了新的文档

--- a/搜索.md
+++ b/搜索.md
@@ -1,2 +1,47 @@
 # 搜索
 
+## 搜索列表
+
+#### method
+
+- get
+
+#### uri
+
+- /search/index/list
+
+#### args
+
+
+#### res
+
+```json
+
+{
+    data:{
+        hot_index:[
+            {
+                'title':'', //搜索名称
+                'index_id':123, // 搜索关键字id
+            }
+        ],
+        index_title_list:[ // 搜索分类
+            {
+                title:'主题搜索', //分类名称
+                list:[
+                   {
+                       name:'更多设计风格',
+                       index_type_id: 12 //搜索分类id
+                    },
+                    ...
+                ]
+            },
+            {
+                title:'求职招聘',
+            }
+        ]
+
+    }
+}
+
+```
